--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
@@ -21,6 +22,8 @@
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
